kubernetes/local/rest_api_gcbm/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gcbm-api
  labels:
    app: gcbm-api
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 30001
  selector:
    app: gcbm-api
